# suna-agent

./: package-lock.json  setup.py
.continue/mcpServers/: new-mcp-server-2.yaml  new-mcp-server-4.yaml
.idx/: dev.nix  mcp.json
.openmcp/: connection.json
backend/: api.py  pyproject.toml  run_agent_background.py
backend/core/: agent_crud.py  agent_json.py  agent_runs.py  agent_setup.py  agent_tools.py  api.py  feedback.py  run.py  settings_api.py  threads.py
backend/core/tools/: base.py  web_scraper_tool.py  web_search_tool.py
backend/core/utils/: auth_utils.py  limits_checker.py  tool_discovery.py
backend/core/versioning/: version_service.py
backend/supabase/migrations/: 20250815120000_create_settings_table.sql
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/dashboard/: layout-content.tsx
frontend/src/components/layout/: app-providers.tsx
frontend/src/components/sidebar/: nav-agents.tsx  sidebar-left.tsx
